# StalinMergeSort

./: .editorconfig  .gitignore  LICENCE  README.md
src/: CMakeLists.txt  RebuildAndRun.sh  StalinMergeSort.h  example.cpp
src/FlexibleArray/: FlexibleArray.cpp  FlexibleArray.h
src/StalinMergeSort/: StalinMergeSort.cpp  StalinMergeSort.h
src/UnionOfSovietSocialistRepublics/: UnionOfSovietSocialistRepublics.cpp  UnionOfSovietSocialistRepublics.h
